updated pagination tests

--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -267,8 +267,7 @@ $().ready(function(){
 	    is( hello_app.get_my_hash().get( 'store' ).get( 'AnObject' ).get_flavor(), 'blueberry', "chained objects passed correctly" );
 
 	    // testing pagination
-
-	    var pag = hello_app.wrap_list( { collection_name : 'foo_array', size : 5 } );
+	    var pag = hello_app.wrap_list( { wrap_key : 'key', collection_name : 'foo_array', size : 5 } );
 	    
 	    var pag_list = pag.to_list();
 
@@ -329,11 +328,8 @@ $().ready(function(){
 	    is( rounds, 3, "took 3 rounds of 10 to go through the alphabet" );
 	    ok( pag_ok, "all letters are present and there are no extra ones" );
 
-
 	    pag = hello_app.wrap_list( { collection_name : '_foo_array', size : 5 } );
-
 	    var pag_list = pag.to_list();
-
 	    is( pag.full_size(), 26, "26 letters of the alphabet" );
 	    is( pag.get( 0 ), "A", "first letter" );
 	    is( pag_list[ 0 ], "A", "first letter output list" );
@@ -354,6 +350,7 @@ $().ready(function(){
 	    is( pag.get( 3 ), "Z", "Ending with Z" );
 	    is( pag_list[ 3 ], "Z", "output list; ending with Z" );
 	    pag.last();
+	    pag.sort_fields = [];
 	    pag_list = pag.to_list();
 	    is( pag_list[ 4 ], "Z", "output list; Z is last" );
 	    is( pag.get( 4 ), "Z", "Z is last" );
@@ -361,10 +358,16 @@ $().ready(function(){
 	    is( pag_list[ 0 ], "V", "output list after last, start with V" );
 	    pag.back();
 	    pag_list = pag.to_list();
+	    pag.sort_fields = undefined;
+	    pag.search_fields = [];
 	    is( pag_list[ 0 ], "Q", "output list after last, start with Q" );
 	    is( pag.get( 0 ), "Q", "Q is for Rewind" );
 	    is( pag.get( 4 ), "U", "U is for U Rewind" );
 	    pag.first();
+	    pag_list = pag.to_list();
+	    pag.search_values = [];
+	    is( pag_list[ 0 ], "A", "first in list after first" );
+	    is( pag_list[ 4 ], "E", "last in list after first" );
 	    is( pag.get( 0 ), "A", "Back to A" );
 	    is( pag.get( 4 ), "E", "Back to E" );
 
